2008-12-14  Karl Berry  <karl@gnu.org>

	* Makefile.am (wwwdoc): doc fix.

2008-12-09  Karl Berry  <karl@gnu.org>

	* Version 2.4.

2008-11-28  Karl Berry  <karl@tug.org>

	* pretest version 2.3.92.

2008-11-27  Karl Berry  <karl@gnu.org>

	* Makefile.am, and all other source files: use new GPLv3 notice 
	without physical FSF address.

2008-11-07  Karl Berry  <karl@tug.org>

	* pretest version 2.3.91.

2008-02-26  Karl Berry  <karl@gnu.org>

	* autogen.sh: autoconf before autoheader, per autoreconf.

2007-07-26  Karl Berry  <karl@gnu.org>

	* configure.ac (AC_INIT_AUTOMAKE): let's skip dist-bzip2.

2007-06-29  Karl Berry  <karl@gnu.org>

	* Version 2.3.

2007-06-26  Karl Berry  <karl@gnu.org>

	* pretest version 2.2.90.

2006-11-23  Karl Berry  <karl@gnu.org>

	* Version 2.2.
	
	* Makefile.am (po-check): add utility target (from coreutils).

2006-11-09  Karl Berry  <karl@gnu.org>

	* pretest version 2.1.96.

2006-11-08  Karl Berry	<karl@gnu.org>

	* pretest version 2.1.95.
	* configure.ac (AM_GNU_GETTEXT_VERSION): bump to 0.16.
	update gnulib, too.
	* gnulib/lib/.cvsignore: ignore .deps.

2006-10-18  Karl Berry	<karl@gnu.org>

	* pretest version 2.1.94.

2006-10-15  Bob Proulx	<bob@proulx.com>  (tiny change)

	Remove trailing whitespace from files.
	Using 'diff -w' afterward shows no changes.
	* AUTHORS: Run Emacs function 'nuke-trailing-whitespace' on file.
	* ChangeLog.O: Likewise.
	* ChangeLog: Likewise.
	* Makefile.am: Likewise.
	* NEWS: Likewise.
	* THANKS: Likewise.
	* doc/ChangeLog: Likewise.
	* doc/Makefile.am: Likewise.
	* doc/hello.texi: Likewise.
	* man/ChangeLog: Likewise.
	* man/Makefile.am: Likewise.
	* po/POTFILES.in: Likewise.
	* src/ChangeLog: Likewise.
	* src/Makefile.am: Likewise.
	* src/hello.c: Likewise.
	* tests/greeting-1: Likewise.
	* tests/greeting-2: Likewise.
	* tests/hello-1: Likewise.
	* tests/traditional-1: Likewise.

2006-10-15  Karl Berry	<karl@gnu.org>

	* pretest version 2.1.93.
