@@ -2,7 +2,7 @@
 # and all subdirectories).
 # Makefile for the top-level directory of GNU hello.
 # 
-# Copyright 1997, 1998, 2005, 2006, 2007, 2008 Free Software
+# Copyright 1997, 1998, 2005, 2006, 2007, 2008, 2009 Free Software
 # Foundation, Inc.
 #
 # This program is free software; you can redistribute it and/or modify
@@ -81,18 +81,28 @@ po-check:
 	  rm -f $@-1 $@-2;						\
 	fi
 
-doctemp = doc/wwwtemp
+# Example of updating the online web pages for the documentation
+# with the gendocs.sh script; see
+# http://www.gnu.org/prep/maintain/html_node/Invoking-gendocs_002esh.html
+#
 gnulib = $(HOME)/gnu/src/gnulib
 gendocs = $(gnulib)/build-aux/gendocs.sh
-gendocs_envvars = GENDOCS_TEMPLATE_DIR=$(gnulib)/doc
+gendocs_templates = $(gnulib)/doc
+gendocs_envvars = GENDOCS_TEMPLATE_DIR=$(gendocs_templates)
+#
 manual = hello
 manual_title = "Hello, GNU World"
+email = bug-hello@gnu.org
+gendocs_args = --email $(email) $(manual) $(manual_title)
+#
 www_target = $(HOME)/gnu/www/hello/manual
+#
+doctemp = doc/wwwtemp
 wwwdoc:
 	rm -rf $(doctemp) && mkdir $(doctemp)
 	cd $(doctemp) \
 	&& ln -s ../*.texi . \
-	&& env $(gendocs_envvars) $(gendocs) $(manual) $(manual_title)
+	&& env $(gendocs_envvars) $(gendocs) $(gendocs_args)
 	cp -arf $(doctemp)/manual/. $(www_target)
 	ls -ltu $(www_target)/html_node | tail  # cvs rm -f obsolete files
 # followed by cvs add of new files and cvs commit.
